<resources>
    <string name="app_name">城铁安捷</string>
    <string name="login">登录</string>
    <string name="not_any_data">没有数据</string>
    <string name="error_net">糟糕，加载失败了</string>
    <string name="common_retry_text">刷新试试</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="user_please_enter_phone_number">请输入手机号码</string>
    <string name="phoneNum_note">请输入正确的手机号码</string>
    <string name="not_network">无法连接网络，请检查WiFi或移动网络是否开启</string>
    <string name="no_data_text">暂无数据</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="loading">加载中</string>
    <string name="splash_title">城铁安捷</string>
    <string name="splash_title2">办公流程随时记录 工作汇报及时点评</string>
    <string name="splash_copy_right">中铁电气化局集团有限公司城铁公司</string>
    <string name="login_company_name">中铁电气化局集团有限公司城铁公司</string>
    <string name="version_copy_right">Copyright © 2017. All Rights Reserved</string>
    <string name="login_name_title">用户名</string>
    <string name="login_password">密码</string>
    <string name="qr_code_scan">扫码</string>
    <string name="word_feed">工作流</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="sync_loading">正在同步</string>
    <string name="violation_content_hint">请输入违规情况</string>
    <string name="signature">签名</string>
    <string name="clear">清除</string>
    <string name="right_slide_look_more">向右滑查看更多</string>
    <string name="info_modify_title">整改要求</string>
    <string name="info_modify_edit_hint">请输入整改要求</string>
    <string name="examine_user">检查人</string>
    <string name="password_title">密码：</string>
    <string name="modify_password_hint">可输入密码设置新密码</string>
    <string name="home_safe_menu">安全</string>
    <string name="home_quality_menu">质量</string>
    <string name="apply_btn">应用</string>
    <string name="search_hint">输入搜索内容</string>
    <string name="info_duty_title">职务：</string>
    <string name="info_type_work_title">工种：</string>
    <string name="info_belong_company_title">所属单位：</string>
    <string name="info_company_offer_title">劳务公司：</string>
    <string name="info_study_date_title">三级安全培训有效期：</string>
    <string name="info_health_state_title">体检情况：</string>
    <string name="info_work_state_title">在岗状态：</string>
    <string name="user_base_info_title">基本信息</string>
    <string name="info_insurance_title">保险情况</string>
    <string name="info_violate_title">违规情况</string>
    <string name="add_violate">+添加违规</string>
    <string name="create_time_title">时间</string>
    <string name="create_time_hint">事件时间</string>
    <string name="create_address_title">地点</string>
    <string name="create_address_hint">事件地点</string>
    <string name="create_company_title">单位</string>
    <string name="create_company_hint">单位名称</string>
    <string name="create_company_work_title">劳务公司</string>
    <string name="create_company_work_hint">选择劳务公司</string>
    <string name="safe_ratio_title">安全比例</string>
    <string name="company_work">劳务公司</string>
    <string name="company_belong">所属单位</string>
    <string name="station_format">%.0f(%.0f%%)</string>
    <string name="station_line_format">%d(%.0f%%)</string>
    <string name="percent_end">100%</string>
    <string name="user_info_title">个人信息</string>
    <string name="notice_check">允许接收信息通知</string>
    <string name="open_fail">打开失败</string>
    <string name="notice_setting_title">通知设置</string>
    <string name="version_info_title">版本信息</string>
    <string name="now_version">当前版本</string>
    <string name="scan_qr_title">扫二维码</string>
    <string name="safe_supervision_title">安全督导</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="seven">日</string>
    <string name="select_date" formatted="true">%d年%02d月</string>
    <string name="safe_select_title_date" formatted="true">%d-%02d-%02d</string>
    <string name="punish_select_title_date" formatted="true">%d-%02d</string>
    <string name="aite_select">\u0040已选</string>
    <string name="look_group_title">查阅组</string>
    <string name="add">添加</string>
    <string name="mis_folder_all">所有照片</string>
    <string name="mis_preview">预览</string>
    <string name="mis_msg_no_camera">没有系统相机</string>
    <string name="mis_msg_amount_limit">已经达到最高选择数量</string>
    <string name="mis_action_done">完成</string>
    <string name="mis_photo_unit">张</string>
    <string name="mis_tip_take_photo">拍摄照片</string>
    <string name="mis_error_image_not_exist">图片错误</string>
    <string name="mis_error_no_permission">无权限</string>
    <string name="mis_permission_dialog_title">权限拒绝</string>
    <string name="mis_permission_dialog_ok">好</string>
    <string name="mis_permission_dialog_cancel">拒绝</string>
    <string name="mis_permission_rationale">浏览图片需要您提供浏览存储的权限</string>
    <string name="mis_permission_rationale_write_storage">保存拍照图片需要您提供写存储权限</string>
    <string name="mis_permission_not">没有对应的权限</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="photo_select">图片选择</string>
    <string name="compress_image_loading">正在压缩图片</string>
    <string name="select">选择</string>
    <string name="image_select_btn">完成(%1$d/%2$d)</string>
    <string name="select_title">选择图片</string>
    <string name="kt_fileProvider">com.zhongtie.work.fileProvider</string>
    <string name="photo">图片</string>
    <string name="at_user_name">\@%s</string>
    <string name="modify">修改</string>
    <string name="reply">回复</string>
    <string name="approve">签名</string>
    <string name="detail_site">地点：</string>
    <string name="work_category">工种：</string>
    <string name="question_type">问题类型：</string>
    <string name="detail_time">时间：</string>
    <string name="project_team">单位：</string>
    <string name="submit">提交</string>
    <string name="select_photo_tip">上传照片数量最多12张</string>
    <string name="description">描述</string>
    <string name="description_hint">请输入事件描述</string>
    <string name="imaage_title">图片</string>
    <string name="safe_reward_punish">安全处罚</string>
    <string name="punish_team_title">处罚单位</string>
    <string name="punish_amount_title">处罚金额(元)</string>
    <string name="punish_amount_hint">输入处罚金额</string>
    <string name="supervisor_info_title">相关督导信息</string>
    <string name="supervisor_info_hint">选择督导信息</string>
    <string name="create_code_title">编号</string>
    <string name="create_code_hint">输入编号</string>
    <string name="detail_code_title">编号：</string>
    <string name="punish_project_team_title">处罚单位：</string>
    <string name="detail_punish_amount_title">处罚金额：</string>
    <string name="supervisor_look_layout">查看督导信息</string>
    <string name="rp_approve">审批</string>
    <string name="consent">同意</string>
    <string name="send_back">退回</string>
    <string name="approve_idea_title">请您选择审批意见</string>
    <string name="send_back_reason">退回理由</string>
    <string name="send_back_reason_hint">请您填写退回理由</string>
    <string name="up_file">上传</string>
    <string name="download_file">下载</string>
    <string name="title">标题</string>
    <string name="title_edit_hint">请输入标题</string>
    <string name="modify_password">修改密码</string>
    <string name="select_all">全选</string>
    <string name="un_select_all">取消全选</string>
    <string name="create_title">发起</string>
    <string name="not_wrong_text">无违规情况</string>
    <string name="safe_create_input_site">请输入事件地点</string>
    <string name="statistics_title">报表统计</string>
    <string name="notice_setting">设置成功</string>
    <string name="input_reply_content">请输入回复内容</string>
    <string name="reply_success">回复成功</string>
    <string name="loading_title">请稍后</string>
    <string name="create_safe_event_title">请稍后</string>
    <string name="create_success">发起成功</string>
    <string name="user_card_code">身份证号:</string>
    <string name="slide_look_more_title">向右滑动查看更多图片</string>
    <string name="event_check">验证</string>
    <string name="image_review_title">%d/%d</string>
    <string name="print">打印</string>
    <string name="print_fail">打印失败</string>
    <string name="print_title">打印预览</string>
    <string name="dialog_tip_title">提示</string>
    <string name="tip_no_support_print_server">检测到您的手机系统版本过低,无法支持打印服务</string>
    <string name="download">下载</string>
    <string name="tip_download_print_server">检测到您没有安装HP无线打印服务插件,请下载安装过后再试!</string>
    <string name="downloading">正在下载</string>
    <string name="download_fail">下载出错</string>
    <string name="download_complete">下载完成</string>
    <string name="safe_event_modify_loading">正在修改</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="CHECK_TITLE">检查人</string>
    <string name="dialog_tip">提示</string>
    <string name="dialog_tip_exit_app">确定要退出应用吗？</string>
    <string name="exit">退出</string>
    <string name="dialog_tip_exit_user_login">确定要退出当前用户登录吗？</string>
    <string name="developing">功能正在开发中,敬请期待!</string>
    <string name="validate_success">验证成功</string>
    <string name="select_unit">输入单位名称</string>
    <string name="toast_input_punish_code">请输入编号</string>
    <string name="toast_punish_select_unit">请选择处罚单位</string>
    <string name="toast_punish_amount">请输入正确的处罚金额</string>
    <string name="toast_punish_abstract">请输入摘要信息</string>
    <string name="toast_punish_describe">请输入详细情况</string>
    <string name="safe_supervision_item_title">安全监察</string>
    <string name="punish_leader_item_title">安全监察</string>
    <string name="punish_item_tip">仅限选择1人</string>
    <string name="punish_read_group_title">查阅组</string>
    <string name="slide_look_more">查阅组</string>
    <string name="select_cancel_all">取消全选</string>
    <string name="splash_sync_dialog_title">提示</string>
    <string name="splash_sync_error_message">同步失败,请检查网络情况。</string>
    <string name="sync_retry">重试</string>
    <string name="switch_company_loading">正在切换公司</string>
    <string name="switch_fail">切换失败</string>
    <string name="safe_punish_title">安全处罚</string>
    <string name="safe_punish_approve">审核</string>
    <string name="safe_punish_cancel">作废</string>
    <string name="safe_punish_sign">签认</string>
    <string name="safe_punish_agree">同意</string>
    <string name="remodfiy">再次编辑</string>
    <string name="safe_punish_send_back">退回</string>
    <string name="punish_user_title">被处理对象：</string>
    <string name="punish_leader_title">被罚款单位负责人</string>
    <string name="punish_safe_title">安全监察</string>
    <string name="punish_create_success">发起成功</string>
    <string name="punish_edit_success">修改成功</string>
    <string name="select_safe_event_title">相关督导信息</string>
    <string name="punish_cancel_event">确定要作废当前安全处罚么？</string>
    <string name="punish_code_title">编号：</string>
    <string name="punish_change_success">操作成功</string>
    <string name="punish_go_back_status">批示：退回</string>
    <string name="punish_agree_status">批示：同意</string>
    <string name="punish_sign_status">：已签认</string>
    <string name="punish_content_title">理由：</string>
    <string name="endorse_file_title">文件签认</string>
    <string name="endorse_input_title_tip">请输入标题</string>
    <string name="endorse_sign_user_title">签认人</string>
    <string name="endorse_read_group_title">查阅组</string>
    <string name="endorse_upload_file_title">上传文件</string>
    <string name="endorse_sign_title">签认</string>
    <string name="dialog_edit_exit_tip">确定要返回，并放弃当前已经输入的内容吗？</string>
    <string name="select_user_count" formatted="true">最多可选择%d人</string>
</resources>
