<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/layout_dialog_head"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/up"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="12dp"
                android:src="@drawable/arrow_left"
                app:tint="@color/line2"/>

            <TextView
                android:id="@+id/calendar_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="14dp"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:paddingLeft="12dp"
                android:src="@drawable/arrow_right"
                app:tint="@color/line2"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                style="@style/weekIndicatorStyle"
                android:text="@string/one"/>

            <TextView
                style="@style/weekIndicatorStyle"
                android:text="@string/two"/>

            <TextView
                style="@style/weekIndicatorStyle"
                android:text="@string/three"/>

            <TextView
                style="@style/weekIndicatorStyle"
                android:text="@string/four"/>

            <TextView
                style="@style/weekIndicatorStyle"
                android:text="@string/five"/>

            <TextView
                style="@style/weekIndicatorStyle"
                android:text="@string/six"/>

            <TextView
                style="@style/weekIndicatorStyle"
                android:text="@string/seven"/>
        </LinearLayout>

        <com.ldf.calendar.view.MonthPager
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_marginBottom="-29dp"
            android:layout_height="232dp"
            />
    </LinearLayout>
</RelativeLayout>