<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_btn"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:divider="@drawable/divider_horizontal"
    android:orientation="horizontal"
    android:showDividers="middle"
    tools:showIn="@layout/safe_order_info_fragment">

    <TextView
        android:id="@+id/modify"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item_white_select_bg"
        android:gravity="center"
        android:text="@string/modify"
        android:textColor="@color/app_color"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/send_back"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item_white_select_bg"
        android:gravity="center"
        android:text="@string/safe_punish_send_back"
        android:textColor="@color/app_color"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/approve"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item_white_select_bg"
        android:gravity="center"
        android:text="@string/safe_punish_agree"
        android:textColor="@color/app_color"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/sign"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item_white_select_bg"
        android:gravity="center"
        android:text="@string/safe_punish_sign"
        android:textColor="@color/app_color"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item_white_select_bg"
        android:gravity="center"
        android:text="@string/safe_punish_cancel"
        android:textColor="@color/app_color"
        android:textSize="16sp"/>
</LinearLayout>