<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:divider="@drawable/divider_vertical"
    android:dividerPadding="16dp"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/create_code_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_code_title"
            android:textColor="@color/text_color"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/create_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/create_code_hint"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/text_color3"
            android:textSize="14dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/punish_team_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/punish_team_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/punish_team_title"
            android:textColor="@color/text_color"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/punish_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/punish_team_title"
            android:hint="@string/create_company_hint"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/text_color3"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/arrow_next" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/punish_amount_title"
            android:textColor="@color/text_color"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/punish_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:hint="@string/punish_amount_hint"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/text_color3"
            android:textSize="14dp" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/supervisor_info_select_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/supervisor_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/supervisor_info_title"
            android:textColor="@color/text_color"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/supervisor_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/supervisor_info_title"
            android:hint="@string/supervisor_info_hint"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/text_color3"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/arrow_next" />

    </RelativeLayout>

</LinearLayout>