<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/now_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/now_version" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/now_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/now_version"
        android:textColor="@color/app_color" />


    <TextView
        android:id="@+id/copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="3dp"
        android:text="@string/version_copy_right"
        android:textColor="@color/text_color3"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/copy_right"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login_company_name"
        android:textColor="@color/text_color3"
        android:textSize="12dp" />

</RelativeLayout>