<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/send_back_reason"
            android:textColor="@color/black"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/send_back_reason"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_describe_bg"
            android:gravity="top|left"
            android:hint="@string/send_back_reason_hint"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/text_color2"
            android:textColorHint="@color/text_color3"
            android:textSize="14dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/line2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:divider="@drawable/divider_horizontal"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/app_color"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/confirm"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/app_color"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>